--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,8 @@
 .conteudo {
     display: flex;
     width: 100%;
+    height: 100%;
+    justify-content: center;
     align-items: center;
     background-color: blue;
 }
@@ -8,14 +10,17 @@
 .conteudo_construcoes {
     display: flex;
     width: 20%;
+    height: 100%;
     justify-content: left;
     flex-direction: column;
     background-color: yellow;
 }
 
 .conteudo_objPrincipal {
+    display: flex;
     width: 60%;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     background-color: blueviolet;
 }
 
@@ -29,6 +34,7 @@
 
 .conteudo_construcoes_elementos {
     display: flex;
+    height: 100%;
     justify-content: left;
     flex-direction: column;
     background-color: springgreen;
@@ -36,6 +42,8 @@
 
 .conteudo_melhorias_elementos {
     display: flex;
+    width: 20%;
+    height: 100%;
     justify-content: right;
     flex-direction: column;
     background-color: darkgreen;
@@ -47,29 +55,36 @@
     width: 100%;
 }
 
+.conteudo_melhorias_titulo {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
 .conteudo_construcoes_titulo_imagem {
     width: 20%;
-    
     background-color: crimson;
 }
+
 .conteudo_construcoes_titulo_texto {
     width: 80%;
     background-color: darkorchid;
 }
+
 .conteudo_construcoes_titulo_imagem_imagem {
     width: 100%;
 }
 
-.conteudo_construcoes_elementos_elemento{
+.conteudo_construcoes_elementos_elemento {
     display: flex;
     align-items: center;
     gap: 5%;
 }
 
-.conteudo_construcoes_elementos_elemento_imagem{
+.conteudo_construcoes_elementos_elemento_imagem {
     width: 20%;
 }
 
-.conteudo_construcoes_elementos_elemento_imagem_imagem{
+.imagem {
     width: 100%;
 }
