--- a/css/menu.css
+++ b/css/menu.css
@@ -1,7 +1,18 @@
 .cabecalho_menu{
     width: 100%;
+    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: chartreuse;
 }
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
