--- a/css/menu.css
+++ b/css/menu.css
@@ -6,7 +6,7 @@
     align-items: center;
 }
 .button {
-    background-color: #4CAF50; /* Green */
+    background-color: #4CAF50;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -14,4 +14,4 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-  }
+}
