--- a/css/missoes.css
+++ b/css/missoes.css
@@ -52,7 +52,7 @@
     text-align: center;
 }
 .botao{
-    background-color: #4CAF50;
+    background-color: #000000;
     border: none;
     color: white;
     padding: 15px 32px;
