--- a/css/menu.css
+++ b/css/menu.css
@@ -6,7 +6,7 @@
     align-items: center;
 }
 .button {
-    background-color: #4CAF50;
+    background-color: #000000;
     border: none;
     color: white;
     padding: 15px 32px;
