--- a/css/estilo.css
+++ b/css/estilo.css
@@ -32,6 +32,7 @@
     height: 100%;
     justify-content: flex-start;
     flex-direction: column;
+    gap: 1%;
 }
 
 .conteudo_artefatos_elementos {
@@ -39,6 +40,7 @@
     height: 100%;
     justify-content: right;
     flex-direction: column;
+    gap: 1%;
 }
 
 .conteudo_titulos {
@@ -79,6 +81,21 @@
     align-items: center;
     gap: 5%;
 }
+.conteudo_entidades_elementos_elemento_texto{
+    width: 32%;
+    text-align: center;
+}
+.conteudo_entidades_elementos_elemento_botao{
+    display: flex;
+    width: 100%;
+    align-items: center;
+}
+.conteudo_entidades_elementos_elemento_botao_dir{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: right;
+}
 
 .conteudo_artefatos_elementos_elemento {
     display: flex;
@@ -87,11 +104,26 @@
 }
 
 .conteudo_entidades_elementos_elemento_imagem {
-    width: 20%;
+    width: 28%;
+    height: 100%;
 }
 
 .imagem {
     width: 100%;
+    height: 100%;
+}
+.botao{
+    width: 100%;
+    height: 25px;
+}
+.botaoTexto{
+    padding: 0;
+    padding-right: 5%;
+    margin: 0;
+}
+.botaoDir{
+    width: 50%;
+    height: 25px;
 }
 
 .imagem_moeda {
