--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,9 +1,14 @@
+body{
+    background-color: #195752;
+}
+
 .conteudo {
     display: flex;
     width: 100%;
     height: 800px;
     justify-content: center;
     align-items: center;
+    
 }
 
 .conteudo_entidades {
@@ -20,6 +25,7 @@
     height: 60%;
     flex-direction: column;
     align-items: center;
+    /*position: fixed;*/
 }
 
 .conteudo_artefatos {
