--- a/css/menu.css
+++ b/css/menu.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    /*position: fixed;*/
 }
 .button {
     background-color: #000000;
