--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,8 @@
-body{
+* {
+    box-sizing: border-box;
+}
+
+body {
     background-color: #195752;
 }
 
@@ -8,7 +12,6 @@ body{
     height: 800px;
     justify-content: center;
     align-items: center;
-    
 }
 
 .conteudo_entidades {
@@ -135,8 +138,13 @@ body{
 }
 
 .botao {
-    width: 100%;
-    height: 25px;
+    height: 30px;
+    border: none;
+    color: white;
+    background-color: #000000;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
 }
 
 .botaoTexto {
@@ -146,12 +154,112 @@ body{
 }
 
 .botaoDir {
-    width: 50%;
-    height: 25px;
+    height: 30px;
+    border: none;
+    color: white;
+    background-color: #000000;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
 }
 
 .imagem_moeda {
     width: 100%;
     height: auto;
     border-radius: 100%;
+}
+
+@media (max-width: 1150px) {
+    .conteudo {
+        display: grid;
+        grid-template-areas:
+            "conteudo_objPrincipal"
+            " conteudo_entidades"
+            "conteudo_artefatos";
+        width: 100%;
+        height: auto;
+
+    }
+
+    .conteudo_entidades {
+        grid-area: conteudo_entidades;
+        order: 2;
+        width: 100%;
+        height: auto;
+    }
+
+    .conteudo_objPrincipal {
+        grid-area: conteudo_objPrincipal;
+        order: 1;
+        width: 100%;
+        height: auto;
+    }
+
+    .conteudo_artefatos {
+        grid-area: conteudo_artefatos;
+        order: 3;
+        width: 100%;
+        height: auto;
+    }
+
+    .conteudo_entidades_elementos_elemento1 {
+        display: flex;
+        align-items: center;
+        gap: 5%;
+        justify-content: center;
+    }
+
+    .conteudo_artefatos_elementos_elemento1 {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .conteudo_titulos_artefatos_texto {
+        width: 40%;
+        text-align: left;
+        padding-left: 20px;
+    }
+
+    .conteudo_entidades_elementos_elemento_botao_dir {
+        display: flex;
+        width: 100%;
+        align-items: center;
+        justify-content: left;
+    }
+
+    .conteudo_titulos_artefatos_imagem {
+        width: 60%;
+        padding-left: 5%;
+    }
+
+    .conteudo_entidades_elementos_elemento_texto {
+        width: 32%;
+        text-align: left;
+    }
+
+    .conteudo_titulos {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        padding-left: 15%;
+    }
+
+    .conteudo_entidades_elementos_elemento_imagem {
+        width: 30%;
+        height: 100%;
+    }
+
+    .conteudo_artefatos_elementos_elemento {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .conteudo_entidades_elementos_elemento {
+        display: flex;
+        align-items: center;
+        gap: 5%;
+        justify-content: center;
+    }
 }
