--- a/css/menu.css
+++ b/css/menu.css
@@ -1,4 +1,4 @@
-.cabecalho_menu{
+.cabecalho_menu {
     width: 100%;
     height: 100px;
     display: flex;
@@ -6,6 +6,7 @@
     align-items: center;
     /*position: fixed;*/
 }
+
 .button {
     background-color: #000000;
     border: none;
@@ -15,4 +16,18 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+}
+
+@media (max-width: 1150px) {
+    .cabecalho_menu {
+        display: flexbox;
+        flex-direction: column;
+        height: 400px;
+    }
+
+    .button {
+        padding-left: 50px;
+        padding-right: 50px;
+        width: 200px;
+    }
 }
