--- a/css/estilo.css
+++ b/css/estilo.css
@@ -141,7 +141,7 @@ body {
     height: 30px;
     border: none;
     color: white;
-    background-color: #000000;
+    background-color: #0e302d;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -157,7 +157,7 @@ body {
     height: 30px;
     border: none;
     color: white;
-    background-color: #000000;
+    background-color: #0e302d;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -243,6 +243,7 @@ body {
         align-items: center;
         width: 100%;
         padding-left: 15%;
+        padding-top: 2%;
     }
 
     .conteudo_entidades_elementos_elemento_imagem {
