--- a/css/menu.css
+++ b/css/menu.css
@@ -8,7 +8,7 @@
 }
 
 .button {
-    background-color: #000000;
+    background-color: #0e302d;
     border: none;
     color: white;
     padding: 15px 32px;
