--- a/css/missoes.css
+++ b/css/missoes.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #195752;
+}
+
 .missoes {
     width: 90%;
     padding-left: 9%;
@@ -52,7 +56,7 @@
     text-align: center;
 }
 .botao{
-    background-color: #000000;
+    background-color: #0e302d;
     border: none;
     color: white;
     padding: 15px 32px;
