--- a/css/estilo.css
+++ b/css/estilo.css
@@ -12,6 +12,7 @@ body {
     height: 800px;
     justify-content: center;
     align-items: center;
+    visibility: hidden;
 }
 
 .conteudo_entidades {
@@ -28,6 +29,7 @@ body {
     height: 60%;
     flex-direction: column;
     align-items: center;
+    visibility: visible;
     /*position: fixed;*/
 }
 
@@ -54,6 +56,7 @@ body {
     display: flex;
     align-items: center;
     width: 100%;
+    visibility: visible;
 }
 
 .conteudo_entidades_titulo_imagem {
@@ -87,6 +90,7 @@ body {
     display: flex;
     align-items: center;
     gap: 5%;
+    visibility: visible;
 }
 
 .conteudo_entidades_elementos_elemento {
@@ -118,6 +122,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: right;
+    visibility: visible;
 }
 
 .conteudo_artefatos_elementos_elemento {
